--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "homepage": "https://github.com/phillydam/Star_Wars_Trivia#readme",
   "dependencies": {
-    "method-override": "^3.0.0"
+    "express": "^4.18.1",
+    "hbs": "^4.2.0",
+    "method-override": "^3.0.0",
+    "mongoose": "^6.3.2"
   }
 }
