--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   },
   "homepage": "https://github.com/phillydam/Star_Wars_Trivia#readme",
   "dependencies": {
+    "ejs": "^3.1.7",
     "express": "^4.18.1",
     "hbs": "^4.2.0",
     "method-override": "^3.0.0",
-    "mongoose": "^6.3.2"
+    "mongoose": "^6.3.2",
+    "node": "^17.7.2",
+    "nodemon": "^2.0.16"
   }
 }
